# AI_Audit_Tool

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/eight25_audit/: __init__.py  ai.py  cli.py  metrics.py  models.py  prompt_logging.py  scrape.py  web.py
